# CircuitPython_qmc5883l

./: .pylintrc  LICENSE  README.rst  README.rst.license  pyproject.toml  qmc5883l.py  requirements.txt
.github/workflows/: build.yml
docs/: api.rst  conf.py  examples.rst  index.rst  requirements.txt
examples/: qmc5883l_advanced_settings.py  qmc5883l_data_rate.py  qmc5883l_field_range.py  qmc5883l_magnetic_compass.py  qmc5883l_oversample.py  qmc5883l_simpletest.py
